--- a/crud_cadastro_funcionario/index.html
+++ b/crud_cadastro_funcionario/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Funcionários</title>
     <link rel="stylesheet" href="style.css">
+    
+<!--para a visualização dos ícones de edição e exclusão-->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    
 <!--div container = botão incluir-->
     <div class="container">
         <div class="header">
